--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.container {
+    width: 1366px;
+    height: 100%;
+    margin: 0 auto;
+}
+.services {
+    width: 1366px;
+    height: 750px;
+    margin: 0 auto;
+}
+.services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+.services h2 {
+    text-align: center;
+    color: lightskyblue;
+    font-weight: lighter;
+}
+.services p {
+    width: 600px;
+    margin-top: 20px;
+    text-align: center;
 }
