--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,13 @@
     margin: 0;
     padding: 0;
 }
+.container{
+    width: 1366px;
+    height: 100%;
+    margin: 0 auto;
+}
+.banner{
+    background-image: url(../Images/fundo-azul-nuvens.fw_.png);
+    width: 100%;
+    height: 500px;
+}
