--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,25 @@
     background-image: url(../Images/fundo-azul-nuvens.fw_.png);
     width: 100%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    flex-direction: column;
+}
+.banner h1{
+    font-size: 40px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+}
+.banner p{
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    text-align: center;
+}
+.center{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
