--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,28 @@
 .banner p{
     display: flex;
     justify-content: center;
-    width: 400px;
+    width: 4git00px;
     text-align: center;
 }
 .center{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+}
+.contato{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.contato a{
+    border: 10px solid rgb(49, 49, 49);
+    background-color: rgb(49, 49, 49);
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100px;
 }
