--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 .banner{
     background-image: url(../Images/fundo-azul-nuvens.fw_.png);
     width: 100%;
-    height: 500px;
+    height: 600px;
     display: flex;
     justify-content: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -25,7 +25,7 @@
 .banner p{
     display: flex;
     justify-content: center;
-    width: 4git00px;
+    width: 400px;
     text-align: center;
 }
 .center{
