--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,34 @@
     margin: 0;
     padding: 0;
 }
+.container{
+    width: 1366px;
+    height: 100%;
+    margin: 0 auto;
+}
+body ul li{
+    list-style: none;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    list-style: none;
+}
+ul a{
+    text-decoration: none;
+    color: rgb(170, 165, 165);
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 75px;
+   } 
+
+.header img{
+    width: 166px;
+    height: 166px;
+    margin-left: 30px;
+}
