--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@
     margin: 0 auto;
 }
 .services {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
 }
 .services h2 {
     text-align: center;
@@ -28,4 +28,27 @@
     width: 600px;
     margin-top: 20px;
     text-align: center;
+    font-weight: bolder;
+}
+.data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    padding: 0 30px;
+}
+.data h3 {
+    color: lightskyblue;
+}
+.data img {
+    width: 200px;
+    height: 200px;
+}
+.data p {
+    width: 300px;
+    font-weight: normal;
+}
+.articles {
+    display: flex;
+    justify-content: center;
 }
