--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,45 @@
 }
 body ul li{
     list-style: none;
-    font-size: 20px;
+    font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
     list-style: none;
 }
 ul a{
     text-decoration: none;
-    color: rgb(170, 165, 165);
+    color: rgb(139, 134, 134);
 }
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
     align-items: center;
     background-color: white;
     width: 100%;
-    height: 75px;
+    height: 15px;
+    align-items: center;
    } 
 
 .header img{
-    width: 166px;
-    height: 166px;
-    margin-left: 30px;
+    width: 100px;
+    height: 100px;
+    margin-left: 100px;
+    margin-top: 15px;
+}
+.menu {
+    display: flex;
+}
+.menu li{
+    margin-left: 100px;
+    justify-content: center;
+    
+}
+.menu li a{
+    display: block;
+    padding: 20px;
+}
+.header a:hover{
+    border-bottom: solid 2px lightskyblue;
+}
 }
